--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,17 @@
-body{
+.homepage{
     text-align: center;
-}
-html{
     background-color: rgb(0, 162, 255);
 }
+
+.Vacation{
+    text-align: center;
+    background-image: url(4-1_Slaves_to_Power.webp);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 h1{
     text-align: center;
 }
